Add play endpoint to tracks
